--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -13,14 +13,14 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-left">
         <li>
-          <a href="/users">Users</a>
+          <a href="/">Users</a>
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <%= current_user.username %><span class="caret"></span>
+              <%= current_user.email %><span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
               <li><%= link_to "Profile", user_path(current_user) %></li>
@@ -28,8 +28,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to "Sign Up", new_user_path %></li>
-          <li><a href="/login">Login</a></li>
+          <li><%= link_to "Sign Up", new_user_registration_path %></li>
+          <li><%= link_to "Login", new_user_session_path %></li>
         <% end %>
       </ul>
     </div>
