--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,9 @@
 <h1><%= @user.email %>'s profile</h1>
-<%= link_to "edit profile", edit_user_path(@user) %>
+
+<% if @user == current_user %>
+  <%= link_to "edit profile", edit_user_path(@user) %>
+<% end %>
+
 <% if @user.name %>
   <h3><%= @user.name %></h3>
 <% end %>
