--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -8,6 +8,10 @@
   <div class="form-group">
     <%= f.text_area :description %>
   </div>
+  <div class="form-group">
+    <%= f.file_field :photo %>
+  </div>
 
   <%= f.submit class: "btn btn-success" %>
 <% end %>
+ 
