--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,5 +1,8 @@
 <ul class="list-unstyled">
   <% @listings.each do |listing| %>
-    <li><%= link_to listing.title, listing_path(listing) %></li>
+    <li>
+      <%= image_tag listing.photo.url(:thumb) %>
+      <%= link_to listing.title, listing_path(listing) %>
+    </li>
   <% end %>
 </ul>
