--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,34 @@
 <h1><%= @user.email %>'s profile</h1>
 
 <% if @user == current_user %>
-  <%= link_to "edit profile", edit_user_path(@user) %>
+  <%= link_to "edit profile", edit_user_path(@user) %> |
+  <%= link_to "edit account", edit_user_registration_path(@user) %>
 <% end %>
 
 <% if @user.name %>
-  <h3><%= @user.name %></h3>
+  <h3>They call me: <%= @user.name %></h3>
 <% end %>
 <% if @user.bio && @user.bio != "" %>
   <p class="well"><%= @user.bio %></p>
 <% end %>
 
 <% if @user.listings.any? %>
+  <h3>My listings</h3>
   <ul class="list-unstyled">
     <% @user.listings.each do |listing| %>
-      <li><%= link_to listing.title, listing_path(listing) %></li>
+      <li>
+        <%= link_to listing.title, listing_path(listing) %>
+        <% if @user == current_user %>
+          <%= link_to 'X', listing_path(listing),
+              :data => {
+                :confirm => "You sure??",
+                :method => "delete" },
+                class: 'btn btn-xs btn-warning'
+         %>
+        <% end %>
+
+
+        </li>
     <% end %>
   </ul>
 <% end %>
