--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -28,26 +28,14 @@
               <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
             </ul>
           </li>
-
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
               <span class="badge"><%= current_user.notifications.count %></span>
             </a>
-            <ul class="dropdown-menu" role="menu">
-              <% current_user.notifications.each do |notification| %>
-                <li><a href="#"><%= notification.title %></a></li>
-              <% end %>
-            </ul>
-          </li>
+            <% if current_user.notifications.count > 0 %>
 
+              <%= render 'notifications/index' %>
 
-
-
-
-
-          <li>
-            <%= link_to user_notifications_path(current_user) do %>
-              <span class="badge"><%= current_user.notifications.count %></span>
             <% end %>
           </li>
         <% else %>
@@ -58,3 +46,5 @@
     </div>
   </div>
 </nav>
+
+<%= render 'layouts/notification_modal' %>
