--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -2,4 +2,9 @@
   <% current_user.notifications.each do |notification| %>
     <li class="notification" data-title="<%= notification.title %>" data-body="<%= notification.body %>" data-requester="<%= notification.requester.email %>"><a href="#"><%= notification.title %></a></li>
   <% end %>
+  <% if @foo %>
+    <li>FOO</li>
+  <% end %>
 </ul>
+
+<%= render 'layouts/notification_modal' %>
