--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,6 +15,14 @@
         <li>
           <a href="/users">Users</a>
         </li>
+        <li>
+          <form class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <input type="text" name="query" class="form-control" id="query" placeholder="Search">
+            </div>
+            <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
+          </form>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
@@ -34,7 +42,7 @@
             </a>
             <% if current_user.notifications.count > 0 %>
 
-              <%= render 'notifications/index' %>
+              <%= render template: 'notifications/index' %>
 
             <% end %>
           </li>
@@ -46,5 +54,3 @@
     </div>
   </div>
 </nav>
-
-<%= render 'layouts/notification_modal' %>
