--- a/app/views/layouts/_notification_modal.html.erb
+++ b/app/views/layouts/_notification_modal.html.erb
@@ -8,7 +8,6 @@
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-
       </div>
     </div>
   </div>
@@ -19,7 +18,7 @@
     $("#myModal").modal('show');
     $(".modal-title").text(this.dataset.title);
     $(".modal-body").text(this.dataset.body);
-    $(".modal-footer").text(this.dataset.requester);
+    $(".modal-body").append("<br> from " + this.dataset.requester);
   });
 
 </script>
