--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,9 +16,9 @@
           <a href="/users">Users</a>
         </li>
         <li>
-          <form class="navbar-form navbar-left" role="search">
+          <form class="navbar-form navbar-left" role="search" action="/">
             <div class="form-group">
-              <input type="text" name="query" class="form-control" id="query" placeholder="Search">
+              <input type="text" name="query" class="form-control" id="query" placeholder="Search Listings">
             </div>
             <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
           </form>
@@ -38,11 +38,11 @@
           </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
-              <span class="badge"><%= current_user.notifications.count %></span>
+              <span class="badge badge-warning"><%= current_user.notifications_count %></span>
             </a>
             <% if current_user.notifications.count > 0 %>
 
-              <%= render template: 'notifications/index' %>
+              <%= render template: 'notifications/list' %>
 
             <% end %>
           </li>
