--- a/app/views/notifications/_notification_modal.html.erb
+++ b/app/views/notifications/_notification_modal.html.erb
@@ -3,22 +3,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title"></h4>
+        <h4 class="modal-title"><%= @notification.title %></h4>
       </div>
       <div class="modal-body">
+        Listing: <%= @notification.listing.title %><br>
+        Message: <%= @notification.body %>
       </div>
       <div class="modal-footer">
+        Request sent by: <%= @notification.requester.email %>
       </div>
     </div>
   </div>
 </div>
 
 <script type="text/javascript">
-  $(".notification").click(function() {
+  $(document).ready(function() {
     $("#myModal").modal('show');
-    $(".modal-title").text(this.dataset.title);
-    $(".modal-body").text(this.dataset.body);
-    $(".modal-body").append("<br> from " + this.dataset.requester);
   });
-
 </script>
